Fix width properties to stretch bar to fill the screen

--- a/public/style.css
+++ b/public/style.css
@@ -57,12 +57,13 @@ footer {
     font-size: 12px;
     position: fixed;
     bottom: 0px;
+    width: 100%;
     /* margin: auto; */
     background-color: #f2f2f2;
     border-top: .5px solid #cecece;
 }
 #container {
-    width: 960px;
+    width: 1240px;
     margin: auto;
     background-color: #f2f2f2;
     border-top: .5px solid #cecece;
